deploy: baea8f0f9ef76d1c99c9e8be44ab05ed4802fc13

--- a/colors/index.html
+++ b/colors/index.html
@@ -687,6 +687,12 @@ a.value = v
 
 
 
+function ftd__set_boolean___main(a,v,args,data,id){
+a.value = v
+}
+
+
+
 function ftd__set_string___main(a,v,args,data,id){
 a.value = v
 }
